--- a/app/index.html
+++ b/app/index.html
@@ -187,7 +187,357 @@
       </section>
       <section class="section">
         <div class="container">
-          catalog
+          <div class="row gx-lg-28px">
+            <div class="col-xl-3 col-lg-4">
+              <div class="d-lg-none d-flex flex-column">
+                <button class="btn navbar-toggler navbar-toggler--filter" type="button"
+                  data-bs-toggle="offcanvas"
+                  data-bs-target="#offcanvas-filter"
+                  aria-controls="offcanvas-filter"
+                  aria-label="Toggle navigation">
+                  <span>
+                    Фильтр
+                  </span>
+                  <span class="icon">
+                    <svg>
+                      <use xlink:href="img/icons/filter.svg#svg-filter"></use>
+                    </svg>
+                  </span>
+                </button>
+              </div>
+              <nav class="navbar navbar-dark navbar-expand-lg">
+                <div id="offcanvas-filter" class="offcanvas offcanvas-end" tabindex="-1">
+                  <div class="offcanvas-header">
+                    <button type="button" class="btn btn-close" data-bs-dismiss="offcanvas" aria-label="Close">
+                      <span class="icon">
+                        <svg>
+                          <use xlink:href="img/icons/close.svg#svg-close"></use>
+                        </svg>
+                      </span>
+                    </button>
+                  </div>
+                  <div class="offcanvas-body flex-column align-items-stretch gap-0px">
+                    <h3 class="d-lg-none fs-14px fw-normal lh-lg mb-10px">
+                      Фильтр
+                    </h3>
+                    <form class="bg-gray-200 rounded-3 p-lg-12px py-28px px-20px shadow" style="--bs-bg-opacity: .50">
+                      <div class="separator">
+                        <div class="accordion accordion--separator accordion--plaintext" id="accordion-filter">
+                          <div class="accordion-item">
+                            <div class="accordion-header">
+                              <button class="accordion-button" type="button"
+                                data-bs-toggle="collapse"
+                                data-bs-target="#accordion-filter-0"
+                                aria-controls="accordion-filter-0"
+                                aria-expanded="true">
+                                <span>
+                                  Производитель
+                                </span>
+                                <span class="icon accordion-button-icon">
+                                  <svg>
+                                    <use xlink:href="img/icons/triangle.svg#svg-triangle"></use>
+                                  </svg>
+                                </span>
+                              </button>
+                            </div>
+                            <div id="accordion-filter-0" class="accordion-collapse collapse show" data-bs-parent="#accordion-filter">
+                              <div class="accordion-body">
+                                <div class="d-flex flex-column gap-10px">
+                                  <label class="form-check">
+                                    <input class="form-check-input" type="checkbox">
+                                    <div class="form-check-label">
+                                      Все производители
+                                    </div>
+                                  </label>
+                                  <label class="form-check">
+                                    <input class="form-check-input" type="checkbox">
+                                    <div class="form-check-label">
+                                      Bitdeer
+                                    </div>
+                                  </label>
+                                  <label class="form-check">
+                                    <input class="form-check-input" type="checkbox">
+                                    <div class="form-check-label">
+                                      MicroBT
+                                    </div>
+                                  </label>
+                                  <label class="form-check">
+                                    <input class="form-check-input" type="checkbox">
+                                    <div class="form-check-label">
+                                      Bitmain
+                                    </div>
+                                  </label>
+                                  <label class="form-check">
+                                    <input class="form-check-input" type="checkbox">
+                                    <div class="form-check-label">
+                                      Canaan
+                                    </div>
+                                  </label>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="accordion-item">
+                            <div class="accordion-header">
+                              <button class="accordion-button collapsed" type="button"
+                                data-bs-toggle="collapse"
+                                data-bs-target="#accordion-filter-1"
+                                aria-controls="accordion-filter-1"
+                                aria-expanded="false">
+                                <span>
+                                  Монеты
+                                </span>
+                                <span class="icon accordion-button-icon">
+                                  <svg>
+                                    <use xlink:href="img/icons/triangle.svg#svg-triangle"></use>
+                                  </svg>
+                                </span>
+                              </button>
+                            </div>
+                            <div id="accordion-filter-1" class="accordion-collapse collapse" data-bs-parent="#accordion-filter">
+                              <div class="accordion-body">
+                                <div class="d-flex flex-column gap-10px">
+                                  <label class="form-check">
+                                    <input class="form-check-input" type="checkbox">
+                                    <div class="form-check-label">
+                                      Все монеты
+                                    </div>
+                                  </label>
+                                  <label class="form-check">
+                                    <input class="form-check-input" type="checkbox">
+                                    <div class="form-check-label">
+                                      Bitcoin
+                                    </div>
+                                  </label>
+                                  <label class="form-check">
+                                    <input class="form-check-input" type="checkbox">
+                                    <div class="form-check-label">
+                                      Litecoin
+                                    </div>
+                                  </label>
+                                  <label class="form-check">
+                                    <input class="form-check-input" type="checkbox">
+                                    <div class="form-check-label">
+                                      Dogecoin
+                                    </div>
+                                  </label>
+                                  <label class="form-check">
+                                    <input class="form-check-input" type="checkbox">
+                                    <div class="form-check-label">
+                                      Kaspa
+                                    </div>
+                                  </label>
+                                  <label class="form-check">
+                                    <input class="form-check-input" type="checkbox">
+                                    <div class="form-check-label">
+                                      Bellscoin
+                                    </div>
+                                  </label>
+                                  <label class="form-check">
+                                    <input class="form-check-input" type="checkbox">
+                                    <div class="form-check-label">
+                                      Sedra
+                                    </div>
+                                  </label>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="accordion-item">
+                            <div class="accordion-header">
+                              <button class="accordion-button collapsed" type="button"
+                                data-bs-toggle="collapse"
+                                data-bs-target="#accordion-filter-2"
+                                aria-controls="accordion-filter-2"
+                                aria-expanded="false">
+                                <span>
+                                  Алгоритмы
+                                </span>
+                                <span class="icon accordion-button-icon">
+                                  <svg>
+                                    <use xlink:href="img/icons/triangle.svg#svg-triangle"></use>
+                                  </svg>
+                                </span>
+                              </button>
+                            </div>
+                            <div id="accordion-filter-2" class="accordion-collapse collapse" data-bs-parent="#accordion-filter">
+                              <div class="accordion-body">
+                                <div class="d-flex flex-column gap-10px">
+                                  <label class="form-check">
+                                    <input class="form-check-input" type="checkbox">
+                                    <div class="form-check-label">
+                                      Все алгоритмы
+                                    </div>
+                                  </label>
+                                  <label class="form-check">
+                                    <input class="form-check-input" type="checkbox">
+                                    <div class="form-check-label">
+                                      SHA-256
+                                    </div>
+                                  </label>
+                                  <label class="form-check">
+                                    <input class="form-check-input" type="checkbox">
+                                    <div class="form-check-label">
+                                      Scrypt
+                                    </div>
+                                  </label>
+                                  <label class="form-check">
+                                    <input class="form-check-input" type="checkbox">
+                                    <div class="form-check-label">
+                                      kHeavyHash
+                                    </div>
+                                  </label>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="separator">
+                        <div class="d-flex flex-column gap-16px">
+                          <div class="d-flex flex-column gap-12px">
+                            <div class="d-flex flex-wrap align-items-center justify-content-between gap-8px">
+                              <h3 class="fs-14px fw-medium lh-lg m-0px">
+                                Цена (₽)
+                              </h3>
+                            </div>
+
+                            <div class="row g-0px">
+                              <div class="col-12">
+                                <div class="row gy-6px gx-lg-8px gx-20px">
+                                  <div class="col-6">
+                                    <div class="d-flex align-items-center gap-6px fs-14px text-black">
+                                      <span>
+                                        от
+                                      </span>
+                                      <input type="text" class="form-control form-control-sm flex-fill" placeholder="1000" aria-label="от">
+                                    </div>
+                                  </div>
+                                  <div class="col-6">
+                                    <div class="d-flex align-items-center gap-6px fs-14px text-black">
+                                      <span>
+                                        до
+                                      </span>
+                                      <input type="text" class="form-control form-control-sm flex-fill" placeholder="9000" aria-label="до">
+                                    </div>
+                                  </div>
+                                </div>
+
+                                <div class="invalid-feedback d-block">
+                                  Укажите значения от 1000 до 9000
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+
+                          <div class="d-flex flex-column gap-12px">
+                            <div class="d-flex flex-wrap align-items-center justify-content-between gap-8px">
+                              <h3 class="fs-14px fw-medium lh-lg m-0px">
+                                Потребление (Вт)
+                              </h3>
+                            </div>
+
+                            <div class="row g-0px">
+                              <div class="col-12">
+                                <div class="row gy-6px gx-lg-8px gx-20px">
+                                  <div class="col-6">
+                                    <div class="d-flex align-items-center gap-6px fs-14px text-black">
+                                      <span>
+                                        от
+                                      </span>
+                                      <input type="text" class="form-control form-control-sm flex-fill" placeholder="3000" aria-label="от">
+                                    </div>
+                                  </div>
+                                  <div class="col-6">
+                                    <div class="d-flex align-items-center gap-6px fs-14px text-black">
+                                      <span>
+                                        до
+                                      </span>
+                                      <input type="text" class="form-control form-control-sm flex-fill" placeholder="9000" aria-label="до">
+                                    </div>
+                                  </div>
+                                </div>
+
+                                <div class="invalid-feedback">
+                                  Укажите значения от 1000 до 9000
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+
+                          <div class="d-flex flex-column gap-12px">
+                            <div class="d-flex flex-wrap align-items-center justify-content-between gap-8px">
+                              <h3 class="fs-14px fw-medium lh-lg m-0px">
+                                Хэшрейт
+                              </h3>
+
+                              <div class="btn-group btn-group-xs btn-group--bordered" role="group" aria-label="Basic radio toggle button group">
+                                <input type="radio" class="btn-check" name="hashrate" id="hashrate-0" autocomplete="off" checked>
+                                <label class="btn btn-transparent-teal-400 btn-teal-400" for="hashrate-0">
+                                  Мг/с
+                                </label>
+
+                                <input type="radio" class="btn-check" name="hashrate" id="hashrate-1" autocomplete="off">
+                                <label class="btn btn-transparent-teal-400 btn-teal-400" for="hashrate-1">
+                                  Гх/с
+                                </label>
+
+                                <input type="radio" class="btn-check" name="hashrate" id="hashrate-2" autocomplete="off">
+                                <label class="btn btn-transparent-teal-400 btn-teal-400" for="hashrate-2">
+                                  ТХ/с
+                                </label>
+                              </div>
+                            </div>
+
+                            <div class="row g-0px">
+                              <div class="col-12">
+                                <div class="row gy-6px gx-lg-8px gx-20px">
+                                  <div class="col-6">
+                                    <div class="d-flex align-items-center gap-6px fs-14px text-black">
+                                      <span>
+                                        от
+                                      </span>
+                                      <input type="text" class="form-control form-control-sm flex-fill" placeholder="1" aria-label="от">
+                                    </div>
+                                  </div>
+                                  <div class="col-6">
+                                    <div class="d-flex align-items-center gap-6px fs-14px text-black">
+                                      <span>
+                                        до
+                                      </span>
+                                      <input type="text" class="form-control form-control-sm flex-fill" placeholder="9000" aria-label="до">
+                                    </div>
+                                  </div>
+                                </div>
+
+                                <div class="invalid-feedback">
+                                  Укажите значения от 1000 до 9000
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="separator">
+                        <div class="d-flex flex-column gap-lg-12px gap-8px">
+                          <button type="submit" class="btn btn-sm btn-teal-400">
+                            Применить фильтры
+                          </button>
+                          <button type="reset" class="btn btn-sm btn-outline-primary btn-lg-transparent">
+                            Сбросить
+                          </button>
+                        </div>
+                      </div>
+                    </form>
+                  </div>
+                </div>
+              </nav>
+            </div>
+
+            <div class="col-xl-9 col-lg-8">
+              Content
+            </div>
+          </div>
         </div>
       </section>
     </main>
