Refactor accordion component and implement view switching functionality
- Removed unnecessary data attributes from accordion elements in index.html and src/index.html.
- Updated input fields with default values in both HTML files.
- Changed button classes to include data attributes for view switching.
- Introduced a new JavaScript component for handling view changes between grid and row layouts.
- Created a new SCSS file for view content styles, replacing the old card content styles.
- Removed unused JavaScript components related to dropdowns, modals, offcanvas, and accordion.
- Added card tags for stock and popularity indicators in card partials.
- Adjusted SCSS variables for button padding and input styles.

--- a/app/index.html
+++ b/app/index.html
@@ -222,7 +222,7 @@
                     </h3>
                     <form class="bg-gray-200 rounded-3 p-lg-12px py-28px px-20px shadow" style="--bs-bg-opacity: .50">
                       <div class="separator">
-                        <div class="accordion accordion--separator accordion--plaintext" id="accordion-filter">
+                        <div class="accordion accordion--separator accordion--plaintext">
                           <div class="accordion-item">
                             <div class="accordion-header">
                               <button class="accordion-button" type="button"
@@ -240,7 +240,7 @@
                                 </span>
                               </button>
                             </div>
-                            <div id="accordion-filter-0" class="accordion-collapse collapse show" data-bs-parent="#accordion-filter">
+                            <div id="accordion-filter-0" class="accordion-collapse collapse show">
                               <div class="accordion-body">
                                 <div class="d-flex flex-column gap-10px">
                                   <label class="form-check">
@@ -294,7 +294,7 @@
                                 </span>
                               </button>
                             </div>
-                            <div id="accordion-filter-1" class="accordion-collapse collapse" data-bs-parent="#accordion-filter">
+                            <div id="accordion-filter-1" class="accordion-collapse collapse">
                               <div class="accordion-body">
                                 <div class="d-flex flex-column gap-10px">
                                   <label class="form-check">
@@ -360,7 +360,7 @@
                                 </span>
                               </button>
                             </div>
-                            <div id="accordion-filter-2" class="accordion-collapse collapse" data-bs-parent="#accordion-filter">
+                            <div id="accordion-filter-2" class="accordion-collapse collapse">
                               <div class="accordion-body">
                                 <div class="d-flex flex-column gap-10px">
                                   <label class="form-check">
@@ -418,7 +418,7 @@
                                       <span>
                                         до
                                       </span>
-                                      <input type="text" class="form-control form-control-sm flex-fill" placeholder="9000" aria-label="до">
+                                      <input type="text" class="form-control form-control-sm flex-fill" placeholder="9000" value="9500" aria-label="до">
                                     </div>
                                   </div>
                                 </div>
@@ -453,7 +453,7 @@
                                       <span>
                                         до
                                       </span>
-                                      <input type="text" class="form-control form-control-sm flex-fill" placeholder="9000" aria-label="до">
+                                      <input type="text" class="form-control form-control-sm flex-fill" placeholder="9000" value="3900" aria-label="до">
                                     </div>
                                   </div>
                                 </div>
@@ -505,7 +505,7 @@
                                       <span>
                                         до
                                       </span>
-                                      <input type="text" class="form-control form-control-sm flex-fill" placeholder="9000" aria-label="до">
+                                      <input type="text" class="form-control form-control-sm flex-fill" placeholder="9000" value="9500" aria-label="до">
                                     </div>
                                   </div>
                                 </div>
@@ -576,7 +576,7 @@
                   </ul>
 
                   <div class="navbar-nav d-none d-xxl-flex align-items-center gap-24px">
-                    <div class="d-flex">
+                    <div class="d-inline-flex">
                       <div class="dropdown">
                         <button type="button" class="btn btn-bg-gradient btn-border-gradient dropdown-toggle"
                           data-bs-toggle="dropdown"
@@ -626,14 +626,16 @@
                     </div>
 
                     <div class="d-flex pe-4px">
-                      <button type="button" class="btn btn-plaintext btn-filter">
+                      <button type="button" class="btn btn-plaintext btn-filter"
+                        data-button-view="grid">
                         <span class="icon">
                           <svg>
                             <use xlink:href="img/icons/grid.svg#svg-grid"></use>
                           </svg>
                         </span>
                       </button>
-                      <button type="button" class="btn btn-plaintext btn-filter">
+                      <button type="button" class="btn btn-plaintext btn-filter"
+                        data-button-view="row">
                         <span class="icon">
                           <svg>
                             <use xlink:href="img/icons/rows.svg#svg-rows"></use>
@@ -644,8 +646,17 @@
                   </div>
                 </div>
 
-                <div class="grid-content">
+                <div class="view-content"
+                  data-current-view="grid">
                   <div class="card">
+  <div class="card-tags">
+    <div class="badge badge--instock">
+      В наличии
+    </div>
+    <div class="badge badge--popular">
+      Популярные
+    </div>
+  </div>
   <div class="card-picture">
     <picture>
       <source srcset="./img/card/image-1.webp" type="image/webp">
@@ -724,6 +735,14 @@
 </div>
 
                   <div class="card">
+  <div class="card-tags">
+    <div class="badge badge--instock">
+      В наличии
+    </div>
+    <div class="badge badge--popular">
+      Популярные
+    </div>
+  </div>
   <div class="card-picture">
     <picture>
       <source srcset="./img/card/image-1.webp" type="image/webp">
@@ -802,6 +821,14 @@
 </div>
 
                   <div class="card">
+  <div class="card-tags">
+    <div class="badge badge--instock">
+      В наличии
+    </div>
+    <div class="badge badge--popular">
+      Популярные
+    </div>
+  </div>
   <div class="card-picture">
     <picture>
       <source srcset="./img/card/image-1.webp" type="image/webp">
@@ -880,6 +907,14 @@
 </div>
 
                   <div class="card">
+  <div class="card-tags">
+    <div class="badge badge--instock">
+      В наличии
+    </div>
+    <div class="badge badge--popular">
+      Популярные
+    </div>
+  </div>
   <div class="card-picture">
     <picture>
       <source srcset="./img/card/image-1.webp" type="image/webp">
@@ -958,6 +993,14 @@
 </div>
 
                   <div class="card">
+  <div class="card-tags">
+    <div class="badge badge--instock">
+      В наличии
+    </div>
+    <div class="badge badge--popular">
+      Популярные
+    </div>
+  </div>
   <div class="card-picture">
     <picture>
       <source srcset="./img/card/image-1.webp" type="image/webp">
@@ -1036,6 +1079,14 @@
 </div>
 
                   <div class="card">
+  <div class="card-tags">
+    <div class="badge badge--instock">
+      В наличии
+    </div>
+    <div class="badge badge--popular">
+      Популярные
+    </div>
+  </div>
   <div class="card-picture">
     <picture>
       <source srcset="./img/card/image-1.webp" type="image/webp">
