Refactor code structure for improved readability and maintainability

--- a/app/index.html
+++ b/app/index.html
@@ -143,44 +143,47 @@
 </header>
 
     <main class="main">
-      <section class="section min-h-lg-570px mb-n12px mb-lg-n80px pb-lg-120px pb-64px">
-        <span class="d-none d-md-inline rounded-inherit position-absolute inset-0 z-n1 pe-none bg-size-cover bg-repeat-norepeat bg-position-lg-bottom bg-position-center mb-xxl-n40px mb-lg-n20px mb-md-n32px" style="background-image: url(./img/bg/hero.webp);"></span>
-        <span class="d-md-none rounded-inherit position-absolute inset-0 z-n1 pe-none bg-size-cover bg-repeat-norepeat bg-position-bottom" style="background-image: url(./img/bg/hero--mobile.webp);"></span>
+      <section class="section mb-n12px mb-lg-n80px pb-12px pb-lg-80px bg-gradient-hero overflow-hidden">
         <div class="container">
-          <div class="row">
-            <div class="col-lg-6 col-9">
-              <div class="pt-lg-24px pt-4px">
-                <nav aria-label="breadcrumb">
-                  <ol class="breadcrumb">
-                    <li class="breadcrumb-item">
-                      <span class="icon">
-                        <svg>
-                          <use xlink:href="img/icons/angle-right.svg#svg-angle-right"></use>
-                        </svg>
-                      </span>
-                      <a href="#" class="btn">Главная </a>
-                    </li>
-                    <li class="breadcrumb-item active" aria-current="page">
-                      <span class="icon">
-                        <svg>
-                          <use xlink:href="img/icons/angle-right.svg#svg-angle-right"></use>
-                        </svg>
-                      </span>
-                      Каталог ASIC-майнеров
-                    </li>
-                  </ol>
-                </nav>
+          <div class="d-flex justify-content-between position-relative">
+            <div class="pt-lg-24px pt-4px">
+              <nav aria-label="breadcrumb">
+                <ol class="breadcrumb">
+                  <li class="breadcrumb-item">
+                    <span class="icon">
+                      <svg>
+                        <use xlink:href="img/icons/angle-right.svg#svg-angle-right"></use>
+                      </svg>
+                    </span>
+                    <a href="#" class="btn">Главная </a>
+                  </li>
+                  <li class="breadcrumb-item active" aria-current="page">
+                    <span class="icon">
+                      <svg>
+                        <use xlink:href="img/icons/angle-right.svg#svg-angle-right"></use>
+                      </svg>
+                    </span>
+                    Каталог ASIC-майнеров
+                  </li>
+                </ol>
+              </nav>
 
-                <div class="d-flex flex-column align-items-start gap-lg-40px gap-20px">
-                  <h2 class="fs-lg-50px fs-20px m-0px">
-                    Каталог <br> ASIC-майнеров
-                  </h2>
+              <div class="d-flex flex-column align-items-start gap-lg-40px gap-20px">
+                <h2 class="fs-lg-50px fs-20px m-0px">
+                  Каталог <br> ASIC-майнеров
+                </h2>
 
-                  <button type="button" class="btn btn-40px btn-warm btn-bg-gradient btn-border-gradient">
-                    Оставить заявку
-                  </button>
-                </div>
+                <button type="button" class="btn btn-40px btn-warm btn-bg-gradient btn-border-gradient">
+                  Оставить заявку
+                </button>
               </div>
+            </div>
+
+            <div class="mw-260px mw-md-360px mw-lg-520px mw-xl-632px mt-80px mt-md-8px mt-lg-80px mb-n16px mb-md-n16px mb-lg-n40px ms-n64px me-n48px">
+              <picture>
+                <source srcset="./img/bg/hero.webp" type="image/webp">
+                <img loading="lazy" src="./img/bg/hero.png" class="img-fluid" width="632" height="342" alt="Картинка">
+              </picture>
             </div>
           </div>
         </div>
