feat: add counter component with increment and decrement functionality
- Implemented a counter component using jQuery that allows users to increment and decrement a value.
- The counter updates its input width dynamically based on the value length.
- Added styles for the counter component in SCSS.

feat: integrate Swiper for product image gallery

- Added a product image gallery using Swiper with main and thumbnail views.
- Configured Swiper to allow thumbnail navigation for the main image display.
- Included responsive design adjustments for the Swiper component in SCSS.

feat: create product detail page layout

- Developed a product detail page for Antminer S21 XP with structured HTML layout.
- Included breadcrumb navigation, product images, specifications, and pricing details.
- Integrated a leasing option and a contact form for inquiries.

style: add styles for counter and Swiper components

- Created SCSS styles for the counter component to enhance visual appearance.
- Added styles for the Swiper component to ensure proper layout and responsiveness.

--- a/src/index.html
+++ b/src/index.html
@@ -90,7 +90,7 @@
                     <h3 class="d-lg-none fs-14px fw-normal lh-lg mb-10px">
                       Фильтр
                     </h3>
-                    <form class="bg-gray-200 rounded-3 p-lg-12px py-28px px-20px shadow" style="--bs-bg-opacity: .50">
+                    <form class="bg-gray-200 rounded-12px p-lg-12px py-28px px-20px shadow" style="--bs-bg-opacity: .50">
                       <div class="separator">
                         <div class="accordion accordion--separator accordion--plaintext">
                           <div class="accordion-item">
@@ -343,17 +343,17 @@
 
                               <div class="btn-group btn-group-xs btn-group--bordered" role="group" aria-label="Basic radio toggle button group">
                                 <input type="radio" class="btn-check" name="hashrate" id="hashrate-0" autocomplete="off" checked>
-                                <label class="btn btn-transparent-teal-400 btn-teal-400" for="hashrate-0">
+                                <label class="btn btn-transparent-teal-400" for="hashrate-0">
                                   Мг/с
                                 </label>
 
                                 <input type="radio" class="btn-check" name="hashrate" id="hashrate-1" autocomplete="off">
-                                <label class="btn btn-transparent-teal-400 btn-teal-400" for="hashrate-1">
+                                <label class="btn btn-transparent-teal-400" for="hashrate-1">
                                   Гх/с
                                 </label>
 
                                 <input type="radio" class="btn-check" name="hashrate" id="hashrate-2" autocomplete="off">
-                                <label class="btn btn-transparent-teal-400 btn-teal-400" for="hashrate-2">
+                                <label class="btn btn-transparent-teal-400" for="hashrate-2">
                                   ТХ/с
                                 </label>
                               </div>
