Add SCSS files for input groups, list groups, and reboot styles
- Implemented `_input-group.scss` to define styles for input groups, including base styles, sizing, and validation states.
- Created `_list-group.scss` to establish base styles for list groups, including individual list items, interactive states, and contextual variants.
- Added `_reboot.scss` for normalization of HTML elements, ensuring consistent styling across browsers with a focus on typography, forms, and layout adjustments.

--- a/src/index.html
+++ b/src/index.html
@@ -518,12 +518,24 @@
 
                 <div class="view-content"
                   data-current-view="grid">
-                  @include('partials/card.html')
-                  @include('partials/card.html')
-                  @include('partials/card.html')
-                  @include('partials/card.html')
-                  @include('partials/card.html')
-                  @include('partials/card.html')
+                  @include('partials/card.html', {
+                    "type": "default"
+                  })
+                  @include('partials/card.html', {
+                    "type": "default"
+                  })
+                  @include('partials/card.html', {
+                    "type": "default"
+                  })
+                  @include('partials/card.html', {
+                    "type": "default"
+                  })
+                  @include('partials/card.html', {
+                    "type": "default"
+                  })
+                  @include('partials/card.html', {
+                    "type": "default"
+                  })
 
                   <div class="alert" role="alert">
                     <span class="alert-background d-none d-lg-block" style="background-image: url(./img/bg/banner.webp);"></span>
@@ -547,9 +559,15 @@
                     </div>
                   </div>
 
-                  @include('partials/card.html')
-                  @include('partials/card.html')
-                  @include('partials/card.html')
+                  @include('partials/card.html', {
+                    "type": "default"
+                  })
+                  @include('partials/card.html', {
+                    "type": "default"
+                  })
+                  @include('partials/card.html', {
+                    "type": "default"
+                  })
                 </div>
               </div>
               <div class="d-flex flex-column align-items-center mt-lg-32px mt-20px">
