feat: добавление новых классов для кнопок и утилит min-width в SCSS

--- a/app/index.html
+++ b/app/index.html
@@ -61,12 +61,12 @@
           <div class="navbar-main">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="btn btn-border-gradient nav-link active" aria-current="page" href="#">
-                  Купить  asic-майнер
+                <a class="btn btn-border-gradient nav-link active" aria-current="page" href="./">
+                  Купить asic-майнер
                 </a>
               </li>
               <li class="nav-item">
-                <a class="btn btn-border-gradient nav-link" href="#">
+                <a class="btn btn-border-gradient nav-link" href="./">
                   Комплексные решения
                 </a>
               </li>
