--- a/app/product.html
+++ b/app/product.html
@@ -61,12 +61,12 @@
           <div class="navbar-main">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="btn btn-border-gradient nav-link active" aria-current="page" href="#">
-                  Купить  asic-майнер
+                <a class="btn btn-border-gradient nav-link active" aria-current="page" href="./">
+                  Купить asic-майнер
                 </a>
               </li>
               <li class="nav-item">
-                <a class="btn btn-border-gradient nav-link" href="#">
+                <a class="btn btn-border-gradient nav-link" href="./">
                   Комплексные решения
                 </a>
               </li>
@@ -612,9 +612,22 @@
                         </ul>
                       </div>
 
-                      <div class="flex-fill d-flex flex-column justify-content-end gap-28px">
-                        <div>
-                          123
+                      <div class="flex-fill d-flex flex-column justify-content-end gap-20px gap-lg-28px">
+                        <div class="btn-group btn-group-sm btn-group--gap align-self-lg-start" role="group" aria-label="Basic radio toggle button group">
+                          <input type="radio" class="btn-check" name="calc-currency" id="calc-currency-0" autocomplete="off" checked>
+                          <label class="btn btn-outline-teal-50 min-w-lg-60px rounded-8px" for="calc-currency-0">
+                            $
+                          </label>
+
+                          <input type="radio" class="btn-check" name="calc-currency" id="calc-currency-1" autocomplete="off">
+                          <label class="btn btn-outline-teal-50 min-w-lg-60px rounded-8px" for="calc-currency-1">
+                            ₽
+                          </label>
+
+                          <input type="radio" class="btn-check" name="calc-currency" id="calc-currency-2" autocomplete="off">
+                          <label class="btn btn-outline-teal-50 min-w-lg-60px rounded-8px" for="calc-currency-2">
+                            LTC
+                          </label>
                         </div>
 
                         <div class="d-flex flex-column gap-16px gap-lg-24px">
